# notebook-mcp

./: .gitignore  README.md  README_PYPI.md  brainstorming_with_chatgpt.txt  pyproject.toml
npm/: README.md  package.json
npm/lib/: launcher.js
src/notebook_mcp/: analyzer.py  ast_analysis.py  context_builder.py  dependency_graph.py  errors.py  execution_manager.py  jupyter_server.py  kernel_channels.py  models.py  notebook_io.py  server.py  state_engine.py  utils.py
tests/: test_analyzer_smoke.py  test_ast_analysis.py  test_dependency_graph.py  test_execution_manager.py  test_state_engine.py
