[project]
name = "notebook-mcp"
version = "1.5.4"
description = "MCP server that provides notebook-aware context and analysis for .ipynb files"
readme = "README_PYPI.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "mcp>=1.0.0",
  "nbformat>=5.10.4",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "networkx>=3.3",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "build>=1.2.1",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/akram-side-projects/notebook-mcp"
Repository = "https://github.com/akram-side-projects/notebook-mcp"

[project.scripts]
notebook-mcp = "notebook_mcp.server:main"
notebook-mcp-python = "notebook_mcp.server:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
